quitando lupa y agrandando logo schon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
                 <ul class="nav-menu">
                     <li><a href="#" class="boton-colecciones">colecciones</a></li>
-                    <li><a href="#" class="boton-buscar"><img src="./assets/images/search.png"></a></li>
+                  <!--  <li><a href="#" class="boton-buscar"><img src="./assets/images/search.png"></a></li> -->
                     <li><a href="#" class="shopping-bag"><img src="./assets/images/shopping-bag (1).png"></a></li>
                 </ul>
             </nav>
