--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./assets/images/logo-schon-negro.png"  class="header-logo"></img>
             </a>
                 <ul class="nav-menu">
-                    <li><a href="#" class="boton-colecciones">colecciones</a></li>
+                    <li><a href="#" class="boton-colecciones">disponibles</a></li>
                   <!--  <li><a href="#" class="boton-buscar"><img src="./assets/images/search.png"></a></li> -->
                     <li><a href="#" class="shopping-bag"><img src="./assets/images/shopping-bag (1).png"></a></li>
                 </ul>
