ocultando bolsa de compras

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul class="nav-menu">
                     <li><a href="#" class="boton-colecciones">disponible</a></li>
                   <!--  <li><a href="#" class="boton-buscar"><img src="./assets/images/search.png"></a></li> -->
-                    <li><a href="#" class="shopping-bag"><img src="./assets/images/shopping-bag (1).png"></a></li>
+                  <!-- <li><a href="#" class="shopping-bag"><img src="./assets/images/shopping-bag (1).png"></a></li> -->
                 </ul>
             </nav>
             <main>
