--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 </head>
 <body>
             <nav>
-            <a href="./index.html">
+            <a href="./index.html" class="header-box">
                 <img src="./assets/images/logo-schon-negro.png"  class="header-logo"></img>
             </a>
                 <ul class="nav-menu">
-                    <li><a href="#" class="boton-colecciones">disponible</a></li>
+                    <li><a href="#">disponible</a></li>
                   <!--  <li><a href="#" class="boton-buscar"><img src="./assets/images/search.png"></a></li> -->
                   <!-- <li><a href="#" class="shopping-bag"><img src="./assets/images/shopping-bag (1).png"></a></li> -->
                 </ul>
             </nav>
             <main>
-                <br><br><br><br>
+                <br><br><br>
                 <div class="main-inner">
                     <div class="article-list">
                         <div class="article-list-inner">
@@ -104,3 +104,4 @@
     
 </body>
 </html>
+
